# OgreMockup

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
res/materials/scripts/: system.material
res/models/: root.mesh
src/: Application.cpp  Application.hpp  MainView.cpp  MainView.hpp  OgreWindow.cpp  OgreWindow.hpp  SubView.cpp  SubView.hpp  common.hpp  main.cpp
src/controller/: CameraController.cpp  CameraController.hpp
src/gizmo/: AbstractGizmo.cpp  AbstractGizmo.hpp  RotateGizmo.cpp  RotateGizmo.hpp  ScaleGizmo.cpp  ScaleGizmo.hpp  TranslateGizmo.cpp  TranslateGizmo.hpp
src/loader/: AssimpSceneLoader.cpp  AssimpSceneLoader.hpp
src/object/: ActivePointObject.cpp  ActivePointObject.hpp  AxisGridLineObject.cpp  AxisGridLineObject.hpp  CameraObject.cpp  CameraObject.hpp
src/window/: OgreWindow.cpp  OgreWindow.hpp
